feat: adjustments and new DTO for student grade search